styles.css
body{
    display:flex;
    flex-direction: column;
    margin:0;
    min-height: 100vh;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}


.hero,.main,.footer{
    padding: 0 150px;
}


.footer {
    height: 72px;
    display:flex;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: #1f2937;

}


.main {
    flex: 1;
    display:flex;
    flex-direction:column;

}


.hero {
    display:flex;
    flex-direction: column;
    height: 500px;
    background-color: #1f2937;
    flex:auto;
}

.nav {
    display:flex;
    gap: 25px;
    align-items: center;
    flex-shrink: 0;
    margin-top: 20px;
}

a{
    font-style: none;
    text-decoration: none;
    color: #e5e7eb;
    font-size: 18px;
    
}

p {
    padding: 0;
    margin: 0;
}


.nav p{
    color: #f9faf8;
    font-size: 24px;
    font-weight: 1000;

} 


.one{
    margin-left: auto;
}


.heroc {
    display: flex;
    flex: 1;
    gap: 15px;
    padding: 100px 0;
    align-items: center;
    justify-content: space-between;
}

.heroc .card{
    display: flex;
    flex-direction: column;
    gap:10px;
    padding:0;
}

.card,.image{
    flex-shrink:1;
}

.image {
    
    height:auto;
    width:600px;
}
img {

    width:100%;
    
}

.card .head{
    font-size: 48px;
    color: #f9faf8;
    font-weight: 800;
    
}

.card .content{
    font-size: 18px;
    color: #e5e7eb;
    

}

button {
    background-color: #3882f6;
    padding:5px;
    width: 100px;
    border: none;
    border-radius: 8px;
    outline: none;
    font-size:18px;
}

